# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "b82b48f0536b16a381993151aba211c0a1734770e3ea688ae097dcc756e85ff0"

[project]
name = "ecoscope-workflows-events-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-events-workflow = "ecoscope_workflows_events_workflow.cli:main" }
